--- a/.travis.yml
+++ b/.travis.yml
@@ -8,15 +8,15 @@ php:
 before_install:
     - composer self-update
     - composer --version
-    - wget http://get.sensiolabs.org/php-cs-fixer.phar -O php-cs-fixer.phar
-    - php php-cs-fixer.phar --version
+    - if [ "$TRAVIS_PHP_VERSION" == "7.0" ]; then wget http://get.sensiolabs.org/php-cs-fixer.phar -O php-cs-fixer.phar; fi
+    - if [ "$TRAVIS_PHP_VERSION" == "7.0" ]; then php php-cs-fixer.phar --version; fi
 
 install:
     - COMPOSER_ROOT_VERSION=dev-master composer update --prefer-source
 
 script:
     - if [ "$TRAVIS_PHP_VERSION" == "7.0" ]; then php php-cs-fixer.phar fix --dry-run -v; fi
-    - vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+    - if [ "$TRAVIS_PHP_VERSION" == "7.0" ]; then vendor/bin/phpunit --coverage-clover build/logs/clover.xml; else vendor/bin/phpunit; fi
 
 after_script:
     - if [ "$TRAVIS_PHP_VERSION" == "7.0" ]; then vendor/bin/coveralls -v; fi
