--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
     "license": "MIT",
     "description": "SCIM schema library",
     "type": "library",
+    "keywords": ["scim", "scim schema", "RFC7643"],
+    "homepage": "https://github.com/tmilos/scim-schema",
     "authors": [
         {
             "name": "Milos Tomic",
@@ -20,6 +22,7 @@
         }
     },
     "require": {
+        "php": "^5.6|^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8|^5.6",
