--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
             "email": "tmilos@gmail.com"
         }
     ],
+    "require": {
+        "php": ">=5.6"
+    },
     "autoload": {
         "psr-4": {
             "Tmilos\\ScimSchema\\": "src/"
@@ -20,9 +23,6 @@
         "psr-4": {
             "Tests\\Tmilos\\ScimSchema\\": "tests/"
         }
-    },
-    "require": {
-        "php": "^5.6|^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8|^5.6",
