--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ composer.phar
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
 # composer.lock
 /build/logs
+
+.phpunit.result.cache
+.idea/
