--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
         }
     },
     "require": {
-        "php": "^5.6|^7.0"
+        "php": ">=7.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8|^5.6",
-        "satooshi/php-coveralls": "^1.0"
+        "phpunit/phpunit": "^9.0|^10.0",
+        "php-coveralls/php-coveralls": "^2.0"
     },
     "minimum-stability": "stable"
 }
